--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "better-emmet-plugin",
   "version": "0.9.0",
   "description": "Emmet abbreviation parser for better-dom",
-  "main": "index.js",
+  "main": "dist/better-emmet-plugin.js",
   "config": {
     "gulp": "--gulpfile node_modules/better-dom-boilerplate/gulpfile.js --cwd ."
+  },
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "better-dom-boilerplate": "git://github.com/chemerisuk/better-dom-boilerplate.git"
   },
   "scripts": {
     "test": "gulp test $npm_package_config_gulp",
@@ -14,15 +21,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chemerisuk/better-emmet-plugin.git"
+    "url": "git+https://github.com/chemerisuk/better-emmet-plugin.git"
   },
+  "keywords": [
+    "ecosystem:better-dom",
+    "better-dom-plugin"
+  ],
   "author": "Maksim Chemerisuk",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/chemerisuk/better-emmet-plugin/issues"
   },
-  "homepage": "https://github.com/chemerisuk/better-emmet-plugin",
-  "devDependencies": {
-    "better-dom-boilerplate": "git://github.com/chemerisuk/better-dom-boilerplate.git"
-  }
+  "homepage": "https://github.com/chemerisuk/better-emmet-plugin#readme"
 }
