--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "gulp test $npm_package_config_gulp",
     "start": "gulp dev $npm_package_config_gulp",
     "preversion": "npm test",
-    "version": "gulp npm-dist $npm_package_config_gulp && git add -A dist",
+    "version": "gulp npm-dist $npm_package_config_gulp",
     "postversion": "git push && git push --tags"
   },
   "repository": {
