--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-emmet-plugin",
-  "version": "0.10.2",
+  "version": "1.0.0-beta.0",
   "description": "Emmet abbreviation parser for better-dom",
   "main": "dist/better-emmet-plugin.js",
   "config": {
