get rid of dependency on bower

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "gulp test $npm_package_config_gulp",
     "start": "gulp dev $npm_package_config_gulp",
-    "version": "gulp dist $npm_package_config_gulp",
+    "version": "gulp dist $npm_package_config_gulp && git add -A dist bower.json",
     "postversion": "git push && git push --tags"
   },
   "repository": {
@@ -34,5 +34,8 @@
   "bugs": {
     "url": "https://github.com/chemerisuk/better-emmet-plugin/issues"
   },
-  "homepage": "https://github.com/chemerisuk/better-emmet-plugin"
+  "homepage": "https://github.com/chemerisuk/better-emmet-plugin",
+  "karmaFiles": [
+    "node_modules/better-dom/dist/better-dom.js"
+  ]
 }
