--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "better-dom": "^3.0.0-beta.3"
   },
+  "peerDependencies": {
+    "better-dom": "^3.0.0-beta.3"
+  },
   "devDependencies": {
     "better-dom-boilerplate": "git://github.com/chemerisuk/better-dom-boilerplate.git"
   },
