--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "better-emmet-plugin",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-rc.0",
   "main": [
     "dist/better-emmet-plugin.js"
   ],
