--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-emmet-plugin",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-rc.0",
   "description": "Emmet abbreviation parser for better-dom",
   "main": "dist/better-emmet-plugin.js",
   "config": {
@@ -10,7 +10,7 @@
     "test": "test"
   },
   "peerDependencies": {
-    "better-dom": "^3.0.0-beta.3"
+    "better-dom": "^3.0.0-rc.1"
   },
   "devDependencies": {
     "better-dom-boilerplate": "git://github.com/chemerisuk/better-dom-boilerplate.git"
